--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 html,body {
     width:100%;
     margin:0px;
+    background:-webkit-linear-gradient(left,#000000,#989898,#000000);
+            background: -o-linear-gradient(left,#000000,#989898,#000000); /* For Opera 11.1 to 12.0 */
+            background: -moz-linear-gradient(left,#000000,#989898,#000000); /* For Firefox 3.6 to 15 */
+            background: linear-gradient(to left,#000000,#989898,#000000);
 }
 
 ul{
